# faker-crypto

./: .gitignore  .pre-commit-config.yaml  License.txt  Makefile  README.md  justfile  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
faker_crypto/: __init__.py
src/faker_crypto/: __init__.py
tests/: test_faker_crypto.py
