[tool.poetry]
name = "faker-crypto"
version = "0.2.0"
description = "faker-crypto is a Faker provider for cryto addreses."
authors = ["Karambir Singh Nain <hello@karambir.in>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/karambir/faker-crypto"
homepage = "https://github.com/karambir/faker-crypto/"
keywords = [
    "faker",
    "test",
    "mock",
    "generator",
    "cryptocurrency"
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8.1"
Faker = ">=14.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"
pytest-cov = "^4.0.0"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--color=yes --verbosity=2 --cov"
testpaths = ["faker_crypto", "tests"]
