[project]
name = "faker-crypto"
version = "1.0.1"
description = "faker-crypto is a Faker provider for cryto addreses."
authors = [
    {name = "Karambir Singh Nain", email = "hello@karambir.in"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["faker", "test", "mock", "generator", "cryptocurrency"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "Faker>=14.2",
]

[project.urls]
Repository = "https://github.com/karambir/faker-crypto"
Homepage = "https://github.com/karambir/faker-crypto/"
Issues = "https://github.com/karambir/faker-crypto/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.11.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/faker_crypto"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    # "UP",   # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["faker_crypto"]

[tool.pytest.ini_options]
addopts = "--cov=faker_crypto --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
